# number_theory_rs

./: Cargo.toml
crates/finite_field/: Cargo.toml
crates/finite_field/src/: general.rs  lib.rs  prime.rs
crates/number_field/: Cargo.toml
crates/number_field/src/: general.rs  lib.rs  quadratic.rs
crates/polynomial/: Cargo.toml
crates/polynomial/src/: lib.rs
crates/traits/: Cargo.toml
crates/traits/src/: lib.rs
